--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,9 +3,10 @@
 
 @inproceedings{10.1145/3465480.3466920,
 author = {Martijn {de Heus} and Kyriakos Psarakis and Marios Fragkoulis and Asterios Katsifodimos},
-title = {<span style="color: #C70039">(🏆 BPA)</span> Distributed Transactions on Serverless Stateful Functions},
+title = {Distributed Transactions on Serverless Stateful Functions},
 year = {2021},
 abbr = {DEBS 2021},
+tag = {🏆 Best Paper},
 pdf = {https://dl-acm-org.tudelft.idm.oclc.org/doi/pdf/10.1145/3465480.3466920},
 isbn = {9781450385558},
 publisher = {Association for Computing Machinery},
@@ -57,6 +58,7 @@ series = {DEBS '21}
 
 @article{koutras2021valentine,
 abbr = {VLDB 2021},
+tag = {Demo Paper},
 pdf = {http://vldb.org/pvldb/vol14/p2871-koutras.pdf},
 author = {Koutras, Christos and Psarakis, Kyriakos and Siachamis, George and Ionescu, Andra and Fragkoulis, Marios and Bonifati, Angela and Katsifodimos, Asterios},
 title = {Valentine in Action: Matching Tabular Data at Scale},
@@ -95,6 +97,7 @@ numpages = {4}
 @article{psarakis2021stateful,
   title={Stateful Entities: Object-oriented Cloud Applications as Distributed Dataflows},
   abbr = {CIDR 2023},
+  tag = {Abstract},
   author={Psarakis, Kyriakos and Zorgdrager, Wouter and Fragkoulis, Marios and Salvaneschi, Guido and Katsifodimos, Asterios},
   pdf = {p70-katsifodimos.pdf},
   year={2023}
