--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,7 +5,7 @@
 author = {Martijn {de Heus} and Kyriakos Psarakis and Marios Fragkoulis and Asterios Katsifodimos},
 title = {Distributed Transactions on Serverless Stateful Functions},
 year = {2021},
-abbr = {DEBS 2021},
+abbr = {DEBS},
 tag = {🏆 Best Paper},
 pdf = {https://dl-acm-org.tudelft.idm.oclc.org/doi/pdf/10.1145/3465480.3466920},
 isbn = {9781450385558},
@@ -49,7 +49,7 @@ series = {DEBS '21}
       doi={10.1109/ICDE51399.2021.00047},
       ISSN={2375-026X},
       month={April},
-      abbr = {ICDE 2021},
+      abbr = {ICDE},
       pdf = {https://arxiv.org/pdf/2010.07386.pdf},
       arxiv = {arXiv:2010.07386},
       blog = {https://delftdata.github.io/valentine/},
@@ -57,8 +57,8 @@ series = {DEBS '21}
 
 
 @article{koutras2021valentine,
-abbr = {VLDB 2021},
-tag = {Demo Paper},
+abbr = {VLDB},
+tag = {Demo},
 pdf = {http://vldb.org/pvldb/vol14/p2871-koutras.pdf},
 author = {Koutras, Christos and Psarakis, Kyriakos and Siachamis, George and Ionescu, Andra and Fragkoulis, Marios and Bonifati, Angela and Katsifodimos, Asterios},
 title = {Valentine in Action: Matching Tabular Data at Scale},
@@ -79,7 +79,7 @@ numpages = {4}
 
 
 @article{DEHEUS2022102015,
-    abbr = {Info. Sys.},
+    abbr = {Inf. Syst.},
     tag = {Journal},
     pdf = {https://pdf.sciencedirectassets.com/271528/AIP/1-s2.0-S0306437922000229/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEEYaCXVzLWVhc3QtMSJHMEUCIAWbkNORkTSngctLfQn8qwkO3lPA6kS9jEWsUXPCeA0dAiEAljRUBvgPGWfTmoo8%2FU2VijyxEXoaL99BjG75GyJPsT8qgwQIv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FARAEGgwwNTkwMDM1NDY4NjUiDFuKf%2BJmrmyQ79yg1irXA8xWDOk%2Fv2YctoarV3wgfzYNGJHo3B8L1qtB%2FJ%2BYavLN1OYtfAczevigzUy9JjwS8jDbs%2BMB2iOwebnqKg5eAYXpVylUZw7MTeAdfL8wvaTfsAF0fcuzRT5YXOU%2FnEsgnA7l%2FKeJS4IlQo8J7pdK%2BZ7cbVCJ%2FXGH1ho5ShqdkENxUEsO3pqyLV6Y2JbWp4XMDu7YDsA62Ua4Iqjx1ZIJ7gYRx6w2Z%2FL4bE0BTScUiec2KjTyKnZpBZBhMHmGtsiAvDna5fC01A%2B7IMpubXUgAG3z95W%2Bpk2DgY6NUCnnLIqWdKpWXAzaM1iLLrvu21daUgBu%2FNq4i1DOR1Gusqi49ufYUgmW%2F1Hw9bV%2F9tYWDBzfRFNk3baj9xZefCbLCfdvnWvheWyu8lkRqB5uJNeCIe5Lld8y6O5aVPZ8REMi2Y4GTIZrVguxtJoz1dmGeDWvNAzbbbZUdKQbLbVW8RyqaTIuFxmNDcSS47Be0%2BeC5XmyooyLkqocc%2FR1FJ5j52lbu8oP6O8a7a1F5Io7U%2BaYA8Z7JHlj872g8VmA6cfCmxtq6DWuXbiEGZvOcM%2F497M4ZMyihmC0tdcKnC9T91wjLHoC72PuNzKm%2BhZNdYAbHkUnvby5fok69zCFk9KRBjqlAX3zkUXmsWAWPlO9XF2gdCDX3IW%2FZHDiNZtmiQJRKVUT1kLRqgJUKpROcR%2BDhzFD4sVR%2B6YvOYchIjwaqGQIIuWTv9zaHb029CRnrpf%2FsHpXbg800bPxvpcOkM5z929fiAPX211C3y2%2FE1TPrwCXN4zYmF4EiLq0i7ZM0oc9zd0Vg%2FwtVAkSmA4zmBZQh0Oq4UZJNstee648tFbKC172HYqQ3mFLRA%3D%3D&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20220318T151556Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYX4LE3XXS%2F20220318%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=505d9361b0cad5d164657ab0843e2b112c31f3ca8aaeaabc4afc7816ff9b436a&hash=90b58a350b683a7449e64480d7b94913f8b359b4698f92bab86ef413e7f6b373&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0306437922000229&tid=spdf-55441965-042a-4b78-9e4b-c2b8d1d0377f&sid=297485445c91b147b028a8e82780637b11c7gxrqb&type=client&download=true&ua=4c030a000a0a5d58045f5b&rr=6edeed36f99f9740},
     title = {Transactions across serverless functions leveraging stateful dataflows},
@@ -97,7 +97,7 @@ numpages = {4}
 
 @article{psarakis2021stateful,
   title={Stateful Entities: Object-oriented Cloud Applications as Distributed Dataflows},
-  abbr = {CIDR 2023},
+  abbr = {CIDR},
   tag = {Abstract},
   journal = {CIDR},
   author={Psarakis, Kyriakos and Zorgdrager, Wouter and Fragkoulis, Marios and Salvaneschi, Guido and Katsifodimos, Asterios},
@@ -107,8 +107,8 @@ numpages = {4}
 
 @article{ionescu2023topiodemo,
   title={Topio Marketplace: Search and Discovery of Geospatial Data},
-  abbr = {EDBT 2023},
-  tag = {Demo Paper},
+  abbr = {EDBT},
+  tag = {Demo},
   journal = {EDBT},
   author={Ionescu, Andra and Alexandridou, Alexandra and Ikonomou, Leonidas and Psarakis, Kyriakos and Patroumpas, Kostas and Chatzigeorgakidis, Georgios and Skoutas, Dimitrios and Athanasiou, Spiros and Hai, Rihan and Katsifodimos, Asterios},
   pdf = {2023_EDBT_Topio_Demo.pdf},
