update cv and edbt best demo

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -107,6 +107,7 @@ numpages = {4}
 
 @article{ionescu2023topiodemo,
   title={Topio Marketplace: Search and Discovery of Geospatial Data},
+  tag = {🏆 Best Demo},
   abbr = {EDBT},
   tag = {Demo},
   journal = {EDBT},
