add icwe topio paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -114,3 +114,12 @@ numpages = {4}
   pdf = {2023_EDBT_Topio_Demo.pdf},
   year={2023}
 }
+
+@article{ionescu2023topioresearch,
+  title={Topio: an Open-Source Web Platform for Trading Geospatial Data},
+  abbr = {ICWE},
+  journal = {ICWE},
+  author={Ionescu, Andra and Patroumpas, Kostas and Psarakis, Kyriakos and Chatzigeorgakidis, Georgios and Collarana, Diego and Barenscher, Kai and Skoutas, Dimitrios and Katsifodimos, Asterios and Athanasiou, Spiros},
+  pdf = {2023_ICWE_Topio.pdf},
+  year={2023}
+}
