fix icwe publication

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -115,11 +115,26 @@ numpages = {4}
   year={2023}
 }
 
-@article{ionescu2023topioresearch,
-  title={Topio: an Open-Source Web Platform for Trading Geospatial Data},
-  abbr = {ICWE},
-  journal = {ICWE},
-  author={Ionescu, Andra and Patroumpas, Kostas and Psarakis, Kyriakos and Chatzigeorgakidis, Georgios and Collarana, Diego and Barenscher, Kai and Skoutas, Dimitrios and Katsifodimos, Asterios and Athanasiou, Spiros},
-  pdf = {2023_ICWE_Topio.pdf},
-  year={2023}
+@InProceedings{10.1007/978-3-031-34444-2_25,
+      abbr = {ICWE},
+author="Ionescu, Andra
+and Patroumpas, Kostas
+and Psarakis, Kyriakos
+and Chatzigeorgakidis, Georgios
+and Collarana, Diego
+and Barenscher, Kai
+and Skoutas, Dimitrios
+and Katsifodimos, Asterios
+and Athanasiou, Spiros",
+editor="Garrig{\'o}s, Irene
+and Murillo Rodr{\'i}guez, Juan Manuel
+and Wimmer, Manuel",
+title="Topio: An Open-Source Web Platform for Trading Geospatial Data",
+booktitle="Web Engineering",
+year="2023",
+publisher="Springer Nature Switzerland",
+address="Cham",
+pages="336--351",
+abstract="The increasing need for data trading across businesses nowadays has created a demand for data marketplaces. However, despite the intentions of both data providers and consumers, today's data marketplaces remain mere data catalogs. We believe that marketplaces of the future require a set of value-added services, such as advanced search and discovery, that have been proposed in the database research community for years, but are not yet put to practice. With this paper, we report on the effort to engineer and develop an open-source modular data market platform to enable both entrepreneurs and researchers to setup and experiment with data marketplaces. To this end, we implemented and extended existing methods for data profiling, dataset search {\&} discovery, and data recommendation. These methods are available as open-source libraries. In this paper we report on how those tools were assembled together to build topio.market, a real-world web platform for trading geospatial data, that is currently in a beta phase.",
+isbn="978-3-031-34444-2"
 }
