--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -157,3 +157,14 @@ keywords = {data streams, distributed computations, similarity joins, load balan
 location = {Neuchatel, Switzerland},
 series = {DEBS '23}
 }
+
+@inproceedings{psarakis2024stateful,
+    abbr = {EDBT},
+    tag = {Vision},
+    pdf = {https://openproceedings.org/2024/conf/edbt/paper-11.pdf},
+  title={Stateful Entities: Object-oriented Cloud Applications as Distributed Dataflows},
+  author={Psarakis, Kyriakos and Zorgdrager, Wouter and Fragkoulis, Marios and Salvaneschi, Guido and Katsifodimos, Asterios},
+  booktitle={27th International Conference on Extending Database Technology},
+  pages={15--21},
+  year={2024}
+}
