add latest updates

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -158,6 +158,20 @@ location = {Neuchatel, Switzerland},
 series = {DEBS '23}
 }
 
+
+@misc{psarakis2024styx,
+      abbr = {Pre-print},
+      tag = {Under Review},
+      pdf = {https://arxiv.org/pdf/2312.06893.pdf},
+      title={Styx: Transactional Stateful Functions on Streaming Dataflows},
+      author={Kyriakos Psarakis and George Siachamis and George Christodoulou and Marios Fragkoulis and Asterios Katsifodimos},
+      year={2024},
+      eprint={2312.06893},
+      archivePrefix={arXiv},
+      primaryClass={cs.DC}
+}
+
+
 @inproceedings{psarakis2024stateful,
     abbr = {EDBT},
     tag = {Vision},
@@ -167,4 +181,15 @@ series = {DEBS '23}
   booktitle={27th International Conference on Extending Database Technology},
   pages={15--21},
   year={2024}
+}
+
+@misc{siachamis2024checkmate,
+      abbr = {ICDE},
+      pdf = {https://arxiv.org/pdf/2403.13629.pdf},
+      title={CheckMate: Evaluating Checkpointing Protocols for Streaming Dataflows},
+      author={George Siachamis and Kyriakos Psarakis and Marios Fragkoulis and Arie van Deursen and Paris Carbone and Asterios Katsifodimos},
+      year={2024},
+      eprint={2403.13629},
+      archivePrefix={arXiv},
+      primaryClass={cs.DC}
 }
