--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -193,3 +193,11 @@ series = {DEBS '23}
       archivePrefix={arXiv},
       primaryClass={cs.DC}
 }
+
+@article{psarakis2021stateful,
+  title={Transactional Cloud Applications Go with the (Data)Flow},
+  abbr = {CIDR},
+  journal = {CIDR},
+  author={Psarakis, Kyriakos and Christodoulou, George and Fragkoulis, Marios and Katsifodimos, Asterios},
+  year={2025}
+}
