update publication metadata

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -99,7 +99,7 @@ numpages = {4}
   title={Stateful Entities: Object-oriented Cloud Applications as Distributed Dataflows},
   abbr = {CIDR},
   tag = {Abstract},
-  journal = {CIDR},
+  booktitle = {13th Annual Conference on Innovative Data Systems Research (CIDR)},
   author={Psarakis, Kyriakos and Zorgdrager, Wouter and Fragkoulis, Marios and Salvaneschi, Guido and Katsifodimos, Asterios},
   pdf = {p70-katsifodimos.pdf},
   year={2023}
@@ -201,7 +201,7 @@ Traditional monolithic applications are migrated to the cloud, typically using a
 
 In this paper, we argue that the principles behind the streaming dataflow execution model and deterministic transactional protocols provide a powerful and suitable substrate for executing transactional cloud applications. To this end, we introduce Styx, a transactional application runtime based on streaming dataflows that enables an object-oriented programming model for scalable, fault-tolerant cloud applications with serializable guarantees.},
   abbr = {CIDR},
-  journal = {CIDR},
+  booktitle = {15th Annual Conference on Innovative Data Systems Research (CIDR)},
   author={Psarakis, Kyriakos and Christodoulou, George and Fragkoulis, Marios and Katsifodimos, Asterios},
   pdf = {styx_cidr.pdf},
   year={2025}
