--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -141,7 +141,7 @@ isbn="978-3-031-34444-2"
 
 @inproceedings{10.1145/3583678.3596891,
           abbr = {DEBS},
-author = {Siachamis, George and Psarakis, Kyriakos and Fragkoulis, Marios and Papapetrou, Odysseas and van Deursen, Arie and Katsifodimos, Asterios},
+author = {Siachamis, George and Psarakis, Kyriakos and Fragkoulis, Marios and Papapetrou, Odysseas and {van Deursen}, Arie and Katsifodimos, Asterios},
 title = {Adaptive Distributed Streaming Similarity Joins},
 year = {2023},
 isbn = {9798400701221},
@@ -187,7 +187,7 @@ series = {DEBS '23}
       abbr = {ICDE},
       pdf = {https://arxiv.org/pdf/2403.13629.pdf},
       title={CheckMate: Evaluating Checkpointing Protocols for Streaming Dataflows},
-      author={George Siachamis and Kyriakos Psarakis and Marios Fragkoulis and Arie van Deursen and Paris Carbone and Asterios Katsifodimos},
+      author={George Siachamis and Kyriakos Psarakis and Marios Fragkoulis and Arie {van Deursen} and Paris Carbone and Asterios Katsifodimos},
       year={2024},
       eprint={2403.13629},
       archivePrefix={arXiv},
