--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -209,7 +209,7 @@ In this paper, we argue that the principles behind the streaming dataflow execut
 
 @inproceedings{10.1145/3629104.3666036,
 abbr = {DEBS},
-author = {Siachamis, George and Christodoulou, George and Psarakis, Kyriakos and Fragkoulis, Marios and van Deursen, Arie and Katsifodimos, Asterios},
+author = {Siachamis, George and Christodoulou, George and Psarakis, Kyriakos and Fragkoulis, Marios and {van Deursen}, Arie and Katsifodimos, Asterios},
 title = {Evaluating Stream Processing Autoscalers},
 year = {2024},
 isbn = {9798400704437},
