add SIGMOD paper and Copenhagen coauthors

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -140,11 +140,11 @@ series = {DEBS '23}
 
 
 @misc{psarakis2024styx,
-      abbr = {Pre-print},
-      tag = {Under Review},
+      abbr = {SIGMOD},
+%      tag = {Under Review},
       pdf = {https://arxiv.org/pdf/2312.06893.pdf},
       title={Styx: Transactional Stateful Functions on Streaming Dataflows},
-      author={Kyriakos Psarakis and George Siachamis and George Christodoulou and Marios Fragkoulis and Asterios Katsifodimos},
+      author={Kyriakos Psarakis and George Christodoulou and George Siachamis and Marios Fragkoulis and Asterios Katsifodimos},
       year={2025},
       eprint={2312.06893},
       archivePrefix={arXiv},
@@ -204,3 +204,13 @@ location = {Villeurbanne, France},
 series = {DEBS '24},
 google_scholar_id={hqOjcs7Dif8C}
 }
+
+@misc{sigmodtutorial,
+      abbr = {SIGMOD},
+      tag = {Tutorial},
+%      pdf = {https://arxiv.org/pdf/2312.06893.pdf},
+      title={Transactional Cloud Applications: Status Quo, Challenges, and Opportunities},
+      author={Rodrigo Laigner and George Christodoulou and Kyriakos Psarakis and Asterios Katsifodimos and Yongluan Zhou},
+      year={2025},
+}
+
