update cv and paper pdfs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -79,7 +79,7 @@ numpages = {4}
   tag = {Abstract},
   booktitle = {13th Annual Conference on Innovative Data Systems Research (CIDR)},
   author={Psarakis, Kyriakos and Zorgdrager, Wouter and Fragkoulis, Marios and Salvaneschi, Guido and Katsifodimos, Asterios},
-  pdf = {p70-katsifodimos.pdf},
+  pdf = {https://vldb.org/cidrdb/papers/2023/p70-katsifodimos.pdf},
   google_scholar_id={eQOLeE2rZwMC},
   year={2023}
 }
@@ -90,7 +90,7 @@ numpages = {4}
   abbr = {EDBT},
   journal = {EDBT},
   author={Ionescu, Andra and Alexandridou, Alexandra and Ikonomou, Leonidas and Psarakis, Kyriakos and Patroumpas, Kostas and Chatzigeorgakidis, Georgios and Skoutas, Dimitrios and Athanasiou, Spiros and Hai, Rihan and Katsifodimos, Asterios},
-  pdf = {2023_EDBT_Topio_Demo.pdf},
+  pdf = {https://openproceedings.org/2023/conf/edbt/3-paper-165.pdf},
   google_scholar_id={WF5omc3nYNoC},
   year={2023}
 }
@@ -181,7 +181,7 @@ series = {DEBS '23}
   abbr = {CIDR},
   booktitle = {15th Annual Conference on Innovative Data Systems Research (CIDR)},
   author={Psarakis, Kyriakos and Christodoulou, George and Fragkoulis, Marios and Katsifodimos, Asterios},
-  pdf = {styx_cidr.pdf},
+  pdf = {https://vldb.org/cidrdb/papers/2025/p25-psarakis.pdf},
   google_scholar_id={KlAtU1dfN6UC},
   year={2025}
 }
