--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -182,7 +182,7 @@ series = {DEBS '23}
   booktitle = {15th Annual Conference on Innovative Data Systems Research (CIDR)},
   author={Psarakis, Kyriakos and Christodoulou, George and Fragkoulis, Marios and Katsifodimos, Asterios},
   pdf = {https://vldb.org/cidrdb/papers/2025/p25-psarakis.pdf},
-  google_scholar_id={KlAtU1dfN6UC},
+  google_scholar_id={qxL8FJ1GzNcC},
   year={2025}
 }
 
