--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,7 +30,7 @@ series = {DEBS '21}
       ISSN={2375-026X},
       month={April},
       abbr = {ICDE},
-           google_scholar_id={u-x6o8ySG0sC},
+      google_scholar_id={u-x6o8ySG0sC},
       pdf = {https://arxiv.org/pdf/2010.07386.pdf},
       blog = {https://delftdata.github.io/valentine/},
 }
@@ -143,6 +143,7 @@ series = {DEBS '23}
       abbr = {SIGMOD},
       pdf = {https://arxiv.org/pdf/2312.06893.pdf},
       title={Styx: Transactional Stateful Functions on Streaming Dataflows},
+      booktitle={ACM Special Interest Group on Management of Data (SIGMOD)},
       author={Kyriakos Psarakis and George Christodoulou and George Siachamis and Marios Fragkoulis and Asterios Katsifodimos},
       year={2025},
       eprint={2312.06893},
@@ -204,10 +205,13 @@ series = {DEBS '24},
 google_scholar_id={hqOjcs7Dif8C}
 }
 
-@misc{sigmodtutorial,
+@inproceedings{sigmodtutorial,
       abbr = {SIGMOD},
       tag = {Tutorial},
       title={Transactional Cloud Applications: Status Quo, Challenges, and Opportunities},
+      booktitle={ACM Special Interest Group on Management of Data (SIGMOD)},
+      pdf={https://arxiv.org/pdf/2504.17106},
+      google_scholar_id={Wp0gIr-vW9MC},
       author={Rodrigo Laigner and George Christodoulou and Kyriakos Psarakis and Asterios Katsifodimos and Yongluan Zhou},
       year={2025},
 }
