update the badges

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -149,7 +149,8 @@ series = {DEBS '23}
       eprint={2312.06893},
       archivePrefix={arXiv},
       google_scholar_id={3fE2CSJIrl8C},
-      primaryClass={cs.DC}
+      primaryClass={cs.DC},
+      blog={https://styx.run/}
 }
 
 
@@ -184,7 +185,8 @@ series = {DEBS '23}
   author={Psarakis, Kyriakos and Christodoulou, George and Fragkoulis, Marios and Katsifodimos, Asterios},
   pdf = {https://vldb.org/cidrdb/papers/2025/p25-psarakis.pdf},
   google_scholar_id={qxL8FJ1GzNcC},
-  year={2025}
+  year={2025},
+  blog={https://styx.run/}
 }
 
 @inproceedings{10.1145/3629104.3666036,
